caching, skill fixes, skill animations
